# helloflashcoco

./: CMakeLists.txt  demo.cc  hostfile  test.sh
include/: bootstrap.h  comm.h  group.h  init.h  nccl.h  socket.h
src/: allreduce.cc  bootstrap.cc  group.cc  init.cc  socket.cc
